Fixed buttons and whitespace

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -17,8 +17,22 @@ a {
   font-family: 'Dosis', sans-serif;
   padding: .5em;
   padding-bottom: 50px;
+  text-decoration: none;
+  color: black;
 }
-
+a:hover {
+  text-decoration: underline;
+  color: rgb(217,133,59);
+}
+button {
+  margin: 1em auto;
+  font-family: 'Dosis', sans-serif;
+}
+.btn {
+  margin: 1em auto;
+  width: 200px;
+  text-align: center;
+}
 
 /***********  IMAGES  ***********/
 
@@ -95,6 +109,9 @@ nav > a:hover {
   width: 40%;
   vertical-align: middle;
 }
+.child_show p:nth-of-type(2) {
+  margin-left: 5%;
+}
 .container_index {
   width:60%;
   margin: 10% auto;
@@ -130,9 +147,6 @@ nav > a:hover {
 .prep > p {
   width: 60%;
   margin-left: 5%;
-}
-.indent {
-  margin-left: 20%;
 }
 .comment {
   margin-left: 5%;
@@ -200,7 +214,7 @@ form.new_form {
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   margin-bottom: 200px;
 }
-input {
+input, button {
   width: 500px;
   display:block;
   border: 1px solid #999;
